Fix image alignment

--- a/src/component/LandingPageV2/FP2/style.css
+++ b/src/component/LandingPageV2/FP2/style.css
@@ -182,10 +182,12 @@ h1 {
   .product-img-container {
     padding-top: 0;
     margin-top: 0;
+    padding-left: 0;
   }
 
   .mockup-img {
     width: unset;
+    margin-left: -3vh;
   }
 
   .bottom-corner, .top-corner {
@@ -211,5 +213,9 @@ h1 {
   .quote-container blockquote::after {
     left: -0.5vh;
     bottom: -6vh;
+  }
+
+  #fp2-parent .column-2 {
+    align-items: center;
   }
 }
